[package]
name = "wintun2"
version = "0.1.0"
edition = "2021"
links = "wintun"
license = "MIT"
description = "A wrapper around WinTun library"
repository = "https://github.com/asakhar/wintun2"

[dependencies]
winapi = { version = "0.3.9", features = ["wininet", "netioapi", "impl-default", "winerror", "iphlpapi", "ipexport"] }
get-last-error = "0.1.1"
widestring = "1.0.2"
chomp = "0.3.1"
guid-parser = "0.1.0"
